[package]
name = "drap"
version = "0.1.0"
authors = ["Djordje Lukic <lukic.djordje@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.33"
walkdir = "2"
dirs = "2.0.2"
prettytable-rs = "^0.8"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0.101", features = [ "derive" ] }
serde_json = "1.0.41"
